@@ -19,17 +19,19 @@
     <startup>
       <process id="naming.service">
         <executable>${TAO_ROOT}/orbsvcs/Naming_Service/Naming_Service</executable>
-        <arguments> -m 0 -ORBEndpoint iiop://localhost:60003 -o ns.ior</arguments>
+        <arguments>-m 0 -ORBEndpoint iiop://localhost:60003 -o ns.ior</arguments>
       </process>
 
       <process id="dance.node.manager" delay="5" waitforcompletion="false">
         <executable>${DANCE_ROOT}/bin/dance_node_manager</executable>
-        <arguments> -ORBEndpoint iiop://`hostname`:10000 -s ${CIAO_ROOT}/bin/ciao_componentserver -n dance.node.manager -t 30 --instance-nc corbaloc:rir:/NameService</arguments>
+        <arguments>-ORBEndpoint iiop://`hostname`:10000 -s ${CIAO_ROOT}/bin/ciao_componentserver -n dance.node.manager -t 30 --instance-nc corbaloc:rir:/NameService</arguments>
+        <output>dance_node_manager.out</output>
+        <error>dance_node_manager.err</error>
       </process>
 
       <process id="dance.execution.manager" delay="5" waitforcompletion="false">
         <executable>${DANCE_ROOT}/bin/dance_execution_manager</executable>
-        <arguments> -o EM.ior</arguments>
+        <arguments>-o EM.ior</arguments>
       </process>
     </startup>
   </environment>
@@ -38,12 +40,12 @@
     <startup>
       <process id="non.dance.node.manager" delay="5" waitforcompletion="false">
         <executable>${DANCE_ROOT}/bin/dance_node_manager</executable>
-        <arguments> -ORBEndpoint iiop://`hostname`:10000 -s ${CIAO_ROOT}/bin/ciao_componentserver -n dance.node.manager -t 30 --instance-nc corbaloc:rir:/NameService</arguments>
+        <arguments>-ORBEndpoint iiop://`hostname`:10000 -s ${CIAO_ROOT}/bin/ciao_componentserver -n dance.node.manager -t 30 --instance-nc corbaloc:rir:/NameService</arguments>
       </process>
 
       <process id="non.dance.execution.manager" delay="5" waitforcompletion="false">
         <executable>${DANCE_ROOT}/bin/dance_execution_manager</executable>
-        <arguments> -o EM.ior</arguments>
+        <arguments>-o EM.ior</arguments>
       </process>
     </startup>
   </environment>
